minor fixes, new tests with jupiter (junit 5)